--- a/Components/Pages/Reportes/ReporteGeneral.razor
+++ b/Components/Pages/Reportes/ReporteGeneral.razor
@@ -1,4 +1,10 @@
-﻿<h3>ReporteGeneral</h3>
+﻿@page "/ReporteGeneral"
+@inject CecytekContext Contexto
+@inject NavigationManager NavigationManager
+
+<TituloPagina Titulo="Reporte general" />
+
+
 
 @code {
 
