--- a/Components/Pages/Reportes/IndexGrupos.razor
+++ b/Components/Pages/Reportes/IndexGrupos.razor
@@ -82,6 +82,7 @@ else
 
 
 
+
 @code {
     [Inject] protected PreloadService PreloadService { get; set; }
     private List<Alumnos?> ListaGrados { get; set; }
@@ -133,20 +134,33 @@ else
 
     private async Task ObtenerGruposActivos(Grados grado, int carrera)
     {
-        //Trae un alumno de cada grupo de la carrera y grado seleccionado
-        GruposActivos = await Contexto.Alumnos
-                    .Where(x => x.grado == grado && x.idcarrera == carrera)
-                    .GroupBy(x => x.grupo)
-                    .Select(x => x.FirstOrDefault())
-                    .ToListAsync();
-        // Muestra en un display Alert el grado, la carrea y el grupo, por ejemplo ° A de la carrera de Ing. en Sistemas
-        // string mensaje = "";
-        // foreach (var item in GruposActivos)
-        // {
-        //     mensaje += "° " + item.grupo + " de la carrera de " + Contexto.Carreras.Where(x => x.idcarrera == item.idcarrera).FirstOrDefault().nombrecarrera + "\n";
-        // }
-        // await Application.Current.MainPage.DisplayAlert("Grupos Activos", mensaje, "Ok");
-        Acordeon = +1;
+        PreloadService.Show();
+        try
+        {
+            //Trae un alumno de cada grupo de la carrera y grado seleccionado
+            GruposActivos = await Contexto.Alumnos
+                        .Where(x => x.grado == grado && x.idcarrera == carrera && x.estado != Estado.Inactivo && x.estado != Estado.Baja && x.estado != Estado.Graduado)
+                        .GroupBy(x => x.grupo)
+                        .Select(x => x.FirstOrDefault())
+                        .ToListAsync();
+            // Muestra en un display Alert el grado, la carrea y el grupo, por ejemplo ° A de la carrera de Ing. en Sistemas
+            // string mensaje = "";
+            // foreach (var item in GruposActivos)
+            // {
+            //     mensaje += "° " + item.grupo + " de la carrera de " + Contexto.Carreras.Where(x => x.idcarrera == item.idcarrera).FirstOrDefault().nombrecarrera + "\n";
+            // }
+            // await Application.Current.MainPage.DisplayAlert("Grupos Activos", mensaje, "Ok");
+            Acordeon = +1;
+        }
+        catch (Exception ex)
+        {
+            //Mostrar mensaje de error en pantalla
+            await Application.Current.MainPage.DisplayAlert("Error", "No se pudieron cargar los grupos activos", "Ok");
+        }
+        finally
+        {
+            PreloadService.Hide();
+        }
     }
 
     private void ReducirContador()
@@ -156,7 +170,7 @@ else
 
     private void Navegar(int grado, int carrera, string grupo)
     {
-        NavigationManager.NavigateTo("/Alumnos/Index/" + grado + "/" + carrera + "/" + grupo);
+        NavigationManager.NavigateTo("/ReportePorGrupo/" + grado + "/" + carrera + "/" + grupo);
     }
 
 
